Adding TestMedicine class to inclass.training package as an assignment.

--- a/JavaTraining/bin/pslLanguageFundamentalAssignment/.gitignore
+++ b/JavaTraining/bin/pslLanguageFundamentalAssignment/.gitignore
@@ -5,3 +5,6 @@
 /RectangularMultiplicationTable.class
 /TaxCal.class
 /Theatre.class
+/EvenNumbers.class
+/EvenAndDivisibleBy5.class
+/Pattern.class
