--- a/JavaTraining/bin/pslStringManupilationAssignment/.gitignore
+++ b/JavaTraining/bin/pslStringManupilationAssignment/.gitignore
@@ -4,3 +4,8 @@
 /PrimeArray.class
 /ReplaceString.class
 /ReverseWords.class
+/Combinations.class
+/TrainingClass.class
+/Animal.class
+/EvenAndDivisibleBy5.class
+/TotalInString.class
